bk_ida/gccida/g3/unroll_loop
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/unroll_loop/src/unroll.c:706:4: error: expected ';' after expression
rtx v14; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/unroll_loop/src/unroll.c:706:5: error: use of undeclared identifier 'v14'
rtx v14; // rdx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/unroll_loop/src/unroll.c:711:4: error: expected ';' after expression
rtx v19; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/unroll_loop/src/unroll.c:711:5: error: use of undeclared identifier 'v19'
rtx v19; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/unroll_loop/src/unroll.c:712:4: error: expected ';' after expression
rtx v20; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/unroll_loop/src/unroll.c:712:5: error: use of undeclared identifier 'v20'
rtx v20; // rdx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/unroll_loop/src/unroll.c:714:4: error: expected ';' after expression
rtx v22; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/unroll_loop/src/unroll.c:714:5: error: use of undeclared identifier 'v22'
rtx v22; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/unroll_loop/src/unroll.c:728:4: error: expected ';' after expression
rtx v36; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/unroll_loop/src/unroll.c:728:5: error: use of undeclared identifier 'v36'
rtx v36; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/unroll_loop/src/unroll.c:735:4: error: expected ';' after expression
rtx i; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/unroll_loop/src/unroll.c:735:5: error: use of undeclared identifier 'i'
rtx i; // r14 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/unroll_loop/src/unroll.c:736:4: error: expected ';' after expression
rtx reg_note; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/unroll_loop/src/unroll.c:736:5: error: must use 'enum' tag to refer to type 'reg_note'
rtx reg_note; // rax 
    ^
    enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/unroll_loop/src/unroll.c:737:6: error: use of undeclared identifier 'v45'
rtx *v45; // rax 
     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/unroll_loop/src/unroll.c:751:6: error: use of undeclared identifier 'v59'
rtx *v59; // rax 
     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/unroll_loop/src/unroll.c:753:6: error: use of undeclared identifier 'v61'
rtx *v61; // rdx 
     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/unroll_loop/src/unroll.c:758:6: error: use of undeclared identifier 'v66'
rtx *v66; // rdi 
     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/unroll_loop/src/unroll.c:772:6: error: use of undeclared identifier 'v80'
rtx *v80; // rbp 
     ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/unroll_loop/src/obj/unroll.o] Error 1
